ingr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    host: application.com
    http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: mongo-express-service
            port:
              number: 8081
